chore(toolchain): swap JBR-25 -> Liberica 25, drop Wayland trial
CI was pinned to JBR via JAVA_DISTRIBUTION='jetbrains' in every
workflow; locally the build relied on whatever JDK 25 happened to
be on PATH. The only JBR-specific feature used in production was
-Dawt.appClassName=... for X11 WM_CLASS, and Main.kt already had
a reflection fallback for stock OpenJDK. Carrying a JBR dependency
for one no-op jvmArg was strict-vendor pinning with zero payoff.

Toolchain swap:
- CI: JAVA_DISTRIBUTION 'jetbrains' -> 'liberica' across
  build_release.yml, pr-portability.yml,
  build-macos-x86_64-community.yml.
- settings.gradle.kts: add foojay-resolver-convention plugin so
  contributors with JDK <25 (or none) auto-resolve a toolchain via
  foojay.io rather than failing with a cryptic
  "no matching toolchain" error.
- build.gradle.kts: subprojects' Java config gets a
  toolchain { languageVersion = 25 } pin. Vendor-loose -- any JDK
  25 works locally; CI is the strict-Liberica reproducibility
  surface.
- client-ui/build.gradle.kts: drop -Dawt.appClassName=AuraLauncher
  (JBR-only honour; stock OpenJDK ignores it and Main.kt
  reflection handles WM_CLASS on every JDK). Simplify the
  WM_CLASS comment now that there is only one code path.
- Main.kt: drop System.setProperty("jna.nosys", "true") -- there
  to keep JBR's bundled JNA 7.x out of the dorkbox path; both
  dorkbox and JBR are gone, JNA only enters via filekit on Windows
  with an explicit 5.18.1 pin in client-ui.
- gradle.properties + build.gradle.kts comments: vendor-neutral
  wording ("JDK 25 / Panama" instead of "JBR-25 / Panama").

Drop AURA_WAYLAND_TRIAL:
- Delete .github/workflows/trial-appimage.yml -- JBR's WLToolkit
  was the trial subject and Liberica does not ship
  sun.awt.wl.WLToolkit.
- Remove the env-gated -Dawt.toolkit.name=WLToolkit block from
  client-ui/build.gradle.kts (no caller left).
- Drop the AURA_WAYLAND_TRIAL reference in Main.kt's display
  diagnostic KDoc.

Wayland sessions continue to wor